# nursing_robot

./: README.md
install/: setup.sh
install/nursing_bringup/share/nursing_bringup/: package.sh  package.xml
install/nursing_bringup/share/nursing_bringup/launch/: nursing_bringup.launch.py
install/nursing_nfc_reader/share/nursing_nfc_reader/: package.ps1
nursing_robot/install/: local_setup.sh
nursing_robot/install/nursing_bringup/share/nursing_bringup/: package.bash  package.dsv  package.ps1  package.zsh
nursing_robot/install/nursing_nfc_reader/lib/nursing_nfc_reader/: nfc_reader
nursing_robot/install/nursing_nfc_reader/share/nursing_nfc_reader/: package.bash  package.dsv  package.sh  package.zsh
nursing_robot/log/: latest_build
nursing_robot/src/nursing_bringup/: install.sh  requirements.txt  setup.py
nursing_robot/src/nursing_bringup/launch/: bringup_launch.py
nursing_robot/src/nursing_nfc_reader/: README.md  package.xml  setup.cfg  setup.py
src/nursing_bringup/: README.md  setup.cfg
src/nursing_nfc_reader/nursing_nfc_reader/: nfc_reader.py
